clusters/apps/web/overlays/dev-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-test
  name: web-test
  namespace: dev
spec:
  selector:
    matchLabels:
      app: web-test
  template:
    metadata:
      labels:
        app: web-test
    spec:
      serviceAccountName: web-sa
      containers:
      - image: ghcr.io/federal-courts-software-factory/open-case-filing-system/web:sha-c8a672d
        name: web-test
        imagePullPolicy: Always
        ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: open-case-filing-system
    app.kubernetes.io/component: api
  name: web
  namespace: dev 
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      serviceAccountName: web-sa
      containers:
        - name: web
          image: ghcr.io/federal-courts-software-factory/open-case-filing-system/web:sha-c8a672d
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
